--- a/app/src/main/res/layout/fragment_game_finished.xml
+++ b/app/src/main/res/layout/fragment_game_finished.xml
@@ -67,6 +67,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintVertical_chainStyle="packed"/>
     <Button
+        android:id="@+id/try_again_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
